--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/me.JPG);"></div>
-				<h1 id="colorlib-logo"><a href="index.html">강태준</a></h1>
+				<h1 id="colorlib-logo"><a href="index.html">TAEJUN KANG</a></h1>
 				<span class="position"><a href="#">WEB DEVELOPER</a> & SPRING</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
@@ -126,6 +126,22 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					   		</div>
 				   		</div>
 				   	</li>
+					   <li style="background-image: url(images/img_bg_1.jpg);">
+						<div class="overlay"></div>
+						<div class="container-fluid">
+							<div class="row">
+								<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
+									<div class="slider-text-inner js-fullheight">
+										<div class="desc">
+											<h1>Hi! <br>I'm Jackson</h1>
+											<h2>100% html5 bootstrap templates Made by <a href="https://colorlib.com/" target="_blank">colorlib.com</a></h2>
+											 <p><a class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>
+										 </div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
 				  	</ul>
 			  	</div>
 			</section>
