--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 					   					<div class="desc">
 						   					<h1>안녕하세요! <br>웹 개발자<br> 강태준입니다.</h1>
 						   					<!-- <h2>100% html5 bootstrap templates Made by <a href="https://colorlib.com/" target="_blank">colorlib.com</a></h2> -->
+											<h2>Web Developer</h2>
 											</div>
 					   				</div>
 					   			</div>
@@ -305,15 +306,16 @@
 					</div>
 					<div class="row">
 						<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-							<p style="color: black;">The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.</p>
+							<p style="color: black;">저는 개발의 첫 시작을 스마트인재개발원 교육과정으로 시작하였습니다. 이후 패스트캠퍼스 스프링 강의 과정을 들으며 Spring을 바탕으로 Spring MVC, Spring DI, AOP 등을 공부 하고 있습니다. 서버는 REST API를 통해 Web Server를 구현 할려고 하고 있습니다. 진행 중인 프로젝트의 완성도를 올리고 싶어 기능 구현 및 프론트(html,css,js) 쪽 공부도 열심히 하고 있습니다.
+							<br>새로운 언어를 배우는데 흥미가 있어 앞으로 필요하다면 새로운 언어를 공부 하고 싶습니다.</p>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>Photoshop</h3>
+								<h3>JAVA</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="75"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
-								    <span>75%</span>
+								  	aria-valuemin="0" aria-valuemax="100" style="width:100%">
+								    <!-- <span>75%</span> -->
 								  	</div>
 								</div>
 							</div>
@@ -323,8 +325,8 @@
 								<h3>jQuery</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="60"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:60%">
-								    <span>60%</span>
+								  	aria-valuemin="0" aria-valuemax="100" style="width:100%">
+								    <!-- <span>60%</span> -->
 								  	</div>
 								</div>
 							</div>
@@ -334,8 +336,8 @@
 								<h3>HTML5</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="85"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
-								    <span>85%</span>
+								  	aria-valuemin="0" aria-valuemax="100" style="width:100%">
+								    <!-- <span>85%</span> -->
 								  	</div>
 								</div>
 							</div>
@@ -345,30 +347,30 @@
 								<h3>CSS3</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
-								    <span>90%</span>
+								  	aria-valuemin="0" aria-valuemax="100" style="width:100%">
+								    <!-- <span>90%</span> -->
 								  	</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>WordPress</h3>
+								<h3>Spring</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="70"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
-								    <span>70%</span>
+								  	aria-valuemin="0" aria-valuemax="100" style="width:100%">
+								    <!-- <span>70%</span> -->
 								  	</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<h3>SEO</h3>
+								<h3>Github</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
-								    <span>80%</span>
+								  	aria-valuemin="0" aria-valuemax="100" style="width:100%">
+								    <!-- <span>80%</span> -->
 								  	</div>
 								</div>
 							</div>
@@ -381,13 +383,13 @@
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">My Work</span>
-							<h2 class="colorlib-heading animate-box">Recent Work</h2>
+							<span class="heading-meta">My Project</span>
+							<h2 class="colorlib-heading animate-box">Project</h2>
 						</div>
 					</div>
 					<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 						<div class="col-md-12">
-							<p class="work-menu"><span><a href="#" class="active">Graphic Design</a></span> <span><a href="#">Web Design</a></span> <span><a href="#">Software</a></span> <span><a href="#">Apps</a></span></p>
+							<span style="color: black;">프로젝트</span>
 						</div>
 					</div>
 					<div class="row">
@@ -399,44 +401,44 @@
 										<span>Website</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
+											<span><a href="#"><i class="icon-eye"></i></a></span>
+											<!-- <span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
 										</p>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/img-2.jpg);">
+							<div class="project" style="background-image: url(images/recetamain.png);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Work 02</a></h3>
-										<span>Animation</span>
+										<h3><a href="receta.html">recetA</a></h3>
+										<span>TeamProject</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
+											<span><a href="receta.html"><i class="icon-eye"></i>Preview</a></span>
+											<!-- <span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
 										</p>
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
-							<div class="project" style="background-image: url(images/img-3.jpg);">
+							<div class="project" style="background-image: url(images/mymain.png);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Work 03</a></h3>
-										<span>Illustration</span>
+										<h3><a href="myproject.html">MyProject</a></h3>
+										<span>Project</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
+											<span><a href="myproject.html"><i class="icon-eye"></i>Preview</a></span>
+											<!-- <span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
 										</p>
 									</div>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
+						<!-- <div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
 							<div class="project" style="background-image: url(images/img-4.jpg);">
 								<div class="desc">
 									<div class="con">
@@ -480,7 +482,7 @@
 									</div>
 								</div>
 							</div>
-						</div>
+						</div> -->
 					</div>
 					<div class="row">
 						<div class="col-md-12 animate-box">
