--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<!-- <li><a href="#" data-nav-section="services">Services</a></li> -->
 						<li><a href="#" data-nav-section="skills">Skills</a></li>
 						<li><a href="#" data-nav-section="work">PROJECT</a></li>
-						<li><a href="#" data-nav-section="experience">Experience</a></li>
+						<li><a href="#" data-nav-section="experience">CERTIFICATION</a></li>
 						<li><a href="#" data-nav-section="education">Education</a></li>
 						<li><a href="#" data-nav-section="blog">Blog</a></li>
 						<li><a href="#" data-nav-section="contact">Contact</a></li>
@@ -394,14 +394,14 @@
 					</div>
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/img-1.jpg);">
+							<div class="project" style="background-image: url(images/mini/mini1.png);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Work 01</a></h3>
-										<span>Website</span>
+										<h3><a href="mini.html">MiniProject</a></h3>
+										<span>MiniProject</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i></a></span>
+											<span><a href="mini.html"><i class="icon-eye"></i>Preview</a></span>
 											<!-- <span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
 										</p>
 									</div>
@@ -496,8 +496,8 @@
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">Experience</span>
-							<h2 class="colorlib-heading animate-box">Work Experience</h2>
+							<span class="heading-meta">CERTIFICATION</span>
+							<h2 class="colorlib-heading animate-box">CERTIFICATION</h2>
 						</div>
 					</div>
 					<div class="row">
@@ -511,8 +511,8 @@
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">Full Stack Developer</a> <span>2017-2018</span></h2>
-					                  <p>Tolerably earnestly middleton extremely distrusts she boy now not. Add and offered prepare how cordial two promise. Greatly who affixed suppose but enquire compact prepare all put. Added forth chief trees but rooms think may.</p>
+					                  <h2><a href="#">컴퓨터활용능력 1급</a> <span>2020.11.13</span></h2>
+					                  <h2>대한상공회의소</h2>
 					               </div>
 					            </div>
 					         </article>
@@ -524,8 +524,8 @@
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Front End Developer at Google Company</a> <span>2017-2018</span></h2>
-					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+					               	<h2><a href="#">정보처리기능사</a> <span>2010.11.11</span></h2>
+					                  <h2>한국산업인력공단</h2>
 					               </div>
 					            </div>
 					         </article>
@@ -536,8 +536,8 @@
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">System Analyst</a> <span>2017-2018</span></h2>
-					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+					               	<h2><a href="#">워드프로세서 1급</a> <span>2010.07.09</span></h2>
+									<h2>대한상공회의소</h2>
 					               </div>
 					            </div>
 					         </article>
@@ -548,8 +548,8 @@
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Creative Designer</a> <span>2017-2018</span></h2>
-					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+					               	<h2><a href="#">1종 대형면허</a> <span>2012.10.15</span></h2>
+									<h2>전남지방경찰청장</h2>
 					               </div>
 					            </div>
 					         </article>
@@ -560,8 +560,21 @@
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">UI/UX Designer at Envato</a> <span>2017-2018</span></h2>
-					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+					               	<h2><a href="#">최우수상</a> <span>2022.07.19</span></h2>
+					                  <h2>Java Festival - 스마트인재개발원</h2>
+					               </div>
+					            </div>
+					         </article>
+							 <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+					            <div class="timeline-entry-inner">
+
+					               <div class="timeline-icon color-1">
+					                  <i class="icon-pen2"></i>
+					               </div>
+
+					               <div class="timeline-label">
+					                  <h2><a href="#">우수상</a> <span>2020.10.21</span></h2>
+					                  <h2>Kaggle - 스마트인재개발원</h2>
 					               </div>
 					            </div>
 					         </article>
