--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
-						   					<h1>안녕하세요! <br>웹 개발자<br> 강태준입니다.</h1>
+						   					<h1>웹 개발자<br> 강태준<br>입니다.</h1>
 						   					<!-- <h2>100% html5 bootstrap templates Made by <a href="https://colorlib.com/" target="_blank">colorlib.com</a></h2> -->
 											<h2>Web Developer</h2>
 											</div>
@@ -179,7 +179,7 @@
 							<div class="row">
 								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 									<div class="hire">
-										<h2>상대적으로 늦게 준비하고 늦게 시작한다 생각 할 수 있지만<br>늦은만큼 더 간절하고 누구보다 더 열심히 할 수 있습니다!</h2>
+										<h2>상대적으로 늦게 준비하고 늦게 시작한다 생각 할 수 있지만 늦은만큼 더 간절하고 누구보다 더 열심히 할 수 있습니다!</h2>
 										<a href="#" class="btn-hire">앞으로 뛰어난 웹 개발자가 되고 싶습니다!</a>
 									</div>
 								</div>
