--- a/mini.html
+++ b/mini.html
@@ -7,13 +7,23 @@
     <title>MiniProject</title>
 </head>
 <body>
-    <img src="images/mini/mini1.png" style="width: 100%; height: auto;">
-    <img src="images/mini/mini2.png" style="width: 100%; height: auto;">
-    <img src="images/mini/mini3.png" style="width: 100%; height: auto;">
-    <img src="images/mini/mini4.png" style="width: 100%; height: auto;">
-    <img src="images/mini/mini5.png" style="width: 100%; height: auto;">
-    <img src="images/mini/mini6.png" style="width: 100%; height: auto;">
-    <img src="images/mini/mini7.png" style="width: 100%; height: auto;">
+    <div style="text-align: center;">
+    <img src="images/mini/mini1.png" style="width: 70%; height: auto;">
+    <img src="images/mini/mini2.png" style="width: 70%; height: auto;">
+    <img src="images/mini/mini3.png" style="width: 70%; height: auto;">
+    <video src="images/mini/mini001.mp4" controls style="width: 70%; height: auto;"></video>
+    <video src="images/mini/mini002.mp4" controls style="width: 70%; height: auto;"></video>
+    <video src="images/mini/mini003.mp4" controls style="width: 70%; height: auto;"></video>
+    </div>
+    <!-- <video src="images/mini1.mp4" controls style="width: 70%;">
+        이 브라우저에서 지원하지 않는 영상입니다.
+     </video>
+     <video src="images/mini2.mp4" controls style="width: 70%;">
+        이 브라우저에서 지원하지 않는 영상입니다.
+     </video>
+     <video src="images/mini3.mp4" controls style="width: 70%;">
+        이 브라우저에서 지원하지 않는 영상입니다.
+     </video> -->
 
 </body>
 </html>
