--- a/index.html
+++ b/index.html
@@ -94,7 +94,12 @@
 						   					<h1>웹 개발자<br> 강태준<br>입니다.</h1>
 						   					<!-- <h2>100% html5 bootstrap templates Made by <a href="https://colorlib.com/" target="_blank">colorlib.com</a></h2> -->
 											<h2>Web Developer</h2>
-											</div>
+											<p class="icon">
+												<h2><span><a href="https://github.com/effortdev">Github <i class="icon-share3"></i></a></span></h2>
+												<!-- <span><a href="myproject.html"><i class="icon-eye"></i>Preview</a></span> -->
+												<!-- <span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
+											</p>
+										</div>
 					   				</div>
 					   			</div>
 					   		</div>
