--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
+	<script src="https://kit.fontawesome.com/def66b134a.js" crossorigin="anonymous"></script>
+
 	</head>
 	<body>
 	<div id="colorlib-page">
@@ -95,10 +97,15 @@
 						   					<!-- <h2>100% html5 bootstrap templates Made by <a href="https://colorlib.com/" target="_blank">colorlib.com</a></h2> -->
 											<h2>Web Developer</h2>
 											<p class="icon">
-												<h2><span><a href="https://github.com/effortdev">Github <i class="icon-share3"></i></a></span></h2>
+												<!-- <h2><span><a href="https://github.com/effortdev">Github <i class="icon-share3"></i></a></span></h2> -->
+												<h1><a href="https://github.com/effortdev"><i class='fa fa-github'></i><h2>Github</h2></a></h1>
 												<!-- <span><a href="myproject.html"><i class="icon-eye"></i>Preview</a></span> -->
 												<!-- <span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
 											</p>
+											<!-- <span class="fa-stack fa-lg">
+												<i class="fa fa-circle fa-stack-2x"></i>
+												<i class="fa fa-github fa-stack-1x fa-inverse"></i>
+											</span> -->
 										</div>
 					   				</div>
 					   			</div>
