--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
 					<ul>
-						<li class="active"><a href="#" data-nav-section="home">Home</a></li>
+						<!-- <li class="active"><a href="#" data-nav-section="home">Home</a></li> -->
 						<li><a href="#" data-nav-section="about">About</a></li>
 						<!-- <li><a href="#" data-nav-section="services">Services</a></li> -->
 						<li><a href="#" data-nav-section="skills">Skills</a></li>
@@ -83,7 +83,7 @@
 		</aside>
 
 		<div id="colorlib-main">
-			<section id="colorlib-hero" class="js-fullheight" data-section="home">
+			<!-- <section id="colorlib-hero" class="js-fullheight" data-section="home">
 				<div class="flexslider js-fullheight">
 					<ul class="slides">
 				   	<li style="background-image: url(images/think2.jpg);">
@@ -94,59 +94,27 @@
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1>웹 개발자<br> 강태준<br>입니다.</h1>
-						   					<!-- <h2>100% html5 bootstrap templates Made by <a href="https://colorlib.com/" target="_blank">colorlib.com</a></h2> -->
+						   					<h2>100% html5 bootstrap templates Made by <a href="https://colorlib.com/" target="_blank">colorlib.com</a></h2>
 											<h2>Web Developer</h2>
 											<p class="icon">
-												<!-- <h2><span><a href="https://github.com/effortdev">Github <i class="icon-share3"></i></a></span></h2> -->
+												<h2><span><a href="https://github.com/effortdev">Github <i class="icon-share3"></i></a></span></h2>
 												<h1><a href="https://github.com/effortdev"><i class='fa fa-github'></i><h2>Github</h2></a></h1>
-												<!-- <span><a href="myproject.html"><i class="icon-eye"></i>Preview</a></span> -->
-												<!-- <span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
+												<span><a href="myproject.html"><i class="icon-eye"></i>Preview</a></span>
+												<span><a href="#"><i class="icon-heart"></i> 49</a></span>
 											</p>
-											<!-- <span class="fa-stack fa-lg">
+											<span class="fa-stack fa-lg">
 												<i class="fa fa-circle fa-stack-2x"></i>
 												<i class="fa fa-github fa-stack-1x fa-inverse"></i>
-											</span> -->
+											</span>
 										</div>
 					   				</div>
 					   			</div>
 					   		</div>
 				   		</div>
 				   	</li>
-				   	<!-- <li style="background-image: url(images/img_bg_2.jpg);">
-				   		<div class="overlay"></div>
-				   		<div class="container-fluid">
-				   			<div class="row">
-					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
-					   				<div class="slider-text-inner">
-					   					<div class="desc">
-						   					<h1>I am <br>a Designer</h1>
-												<h2>100% html5 bootstrap templates Made by <a href="https://colorlib.com/" target="_blank">colorlib.com</a></h2>
-												<p><a class="btn btn-primary btn-learn">View Portfolio <i class="icon-briefcase3"></i></a></p>
-											</div>
-					   				</div>
-					   			</div>
-					   		</div>
-				   		</div>
-				   	</li>
-					   <li style="background-image: url(images/img_bg_1.jpg);">
-						<div class="overlay"></div>
-						<div class="container-fluid">
-							<div class="row">
-								<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
-									<div class="slider-text-inner js-fullheight">
-										<div class="desc">
-											<h1>Hi! <br>I'm Jackson</h1>
-											<h2>100% html5 bootstrap templates Made by <a href="https://colorlib.com/" target="_blank">colorlib.com</a></h2>
-											 <p><a class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>
-										 </div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</li> -->
 				  	</ul>
 			  	</div>
-			</section>
+			</section> -->
 
 			<section class="colorlib-about" data-section="about">
 				<div class="colorlib-narrow-content">
@@ -156,7 +124,9 @@
 								<div class="col-md-12">
 									<div class="about-desc">
 										<span class="heading-meta">About Us</span>
-										<h2 class="colorlib-heading">신입 웹 개발자</h2>
+										<h2 class="colorlib-heading">신입 웹 개발자 강태준 입니다. </h2>
+										<h1><a href="https://github.com/effortdev"><i class='fa fa-github' style='color: rgb(1, 1, 1)'></i></a></h1>
+										<!-- <h1><a href="https://github.com/effortdev"><i class='fa fa-github'></i><h2>Github</h2></a></h1> -->
 										<p style="color: black;"><strong>"안녕하세요. 항상 긍정적인 신입 웹 개발자 강태준입니다!"</strong></p>
 										<p style="color: black;">사람의 능력이 높고 낮음은 종이 한 장 차이라고 생각합니다. 그 차이를 극복하여 성공을 이루어 내는 것은 자세에 달렸다고 생각합니다. 열심히 할 수 있는 자세가 되어 있습니다.</p>
 									</div>
