--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 									<div class="about-desc">
 										<span class="heading-meta">About Us</span>
 										<h2 class="colorlib-heading">신입 웹 개발자 강태준 입니다. </h2>
-										<h1><a href="https://github.com/effortdev"><i class='fa fa-github' style='color: rgb(1, 1, 1)'></i></a></h1>
+										<h1><a style="color: black;" href="https://github.com/effortdev"><i class='fa fa-github' style='color: rgb(1, 1, 1)'></i> Github</a></h1>
 										<!-- <h1><a href="https://github.com/effortdev"><i class='fa fa-github'></i><h2>Github</h2></a></h1> -->
 										<p style="color: black;"><strong>"안녕하세요. 항상 긍정적인 신입 웹 개발자 강태준입니다!"</strong></p>
 										<p style="color: black;">사람의 능력이 높고 낮음은 종이 한 장 차이라고 생각합니다. 그 차이를 극복하여 성공을 이루어 내는 것은 자세에 달렸다고 생각합니다. 열심히 할 수 있는 자세가 되어 있습니다.</p>
@@ -382,8 +382,8 @@
 										<h3><a href="mini.html">MiniProject</a></h3>
 										<span>MiniProject</span>
 										<p class="icon">
-											<span><a href="#"><i class="icon-share3"></i></a></span>
-											<span><a href="mini.html"><i class="icon-eye"></i>Preview</a></span>
+											<!-- <span><a href="#"><i class="icon-share3"></i></a></span> -->
+											<span><a href="mini.html"><i class="icon-eye"></i>Detail</a></span>
 											<!-- <span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
 										</p>
 									</div>
@@ -397,8 +397,8 @@
 										<h3><a href="receta.html">recetA</a></h3>
 										<span>TeamProject</span>
 										<p class="icon">
-											<span><a href="#"><i class="icon-share3"></i></a></span>
-											<span><a href="receta.html"><i class="icon-eye"></i>Preview</a></span>
+											<!-- <span><a href="#"><i class="icon-share3"></i></a></span> -->
+											<span><a href="receta.html"><i class="icon-eye"></i>Detail</a></span>
 											<!-- <span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
 										</p>
 									</div>
@@ -412,8 +412,8 @@
 										<h3><a href="myproject.html">MyProject</a></h3>
 										<span>Project</span>
 										<p class="icon">
-											<span><a href="#"><i class="icon-share3"></i></a></span>
-											<span><a href="myproject.html"><i class="icon-eye"></i>Preview</a></span>
+											<!-- <span><a href="#"><i class="icon-share3"></i></a></span> -->
+											<span><a href="myproject.html"><i class="icon-eye"></i>Detail</a></span>
 											<!-- <span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
 										</p>
 									</div>
