--- a/index.html
+++ b/index.html
@@ -383,7 +383,9 @@
 										<span>MiniProject</span>
 										<p class="icon">
 											<!-- <span><a href="#"><i class="icon-share3"></i></a></span> -->
+											<!-- <i class='fa fa-github' style='color: white'></i> -->
 											<span><a href="mini.html"><i class="icon-eye"></i>Detail</a></span>
+											<span><a href="https://github.com/effortdev/miniproject"><i class='fa fa-github' style='color: white'></i>Code Detail</a></span>
 											<!-- <span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
 										</p>
 									</div>
@@ -399,6 +401,7 @@
 										<p class="icon">
 											<!-- <span><a href="#"><i class="icon-share3"></i></a></span> -->
 											<span><a href="receta.html"><i class="icon-eye"></i>Detail</a></span>
+											<span><a href="https://github.com/effortdev/recetA"><i class='fa fa-github' style='color: white'></i>Code Detail</a></span>
 											<!-- <span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
 										</p>
 									</div>
@@ -414,6 +417,7 @@
 										<p class="icon">
 											<!-- <span><a href="#"><i class="icon-share3"></i></a></span> -->
 											<span><a href="myproject.html"><i class="icon-eye"></i>Detail</a></span>
+											<!-- <span><a href="https://github.com/effortdev/recetA"><i class='fa fa-github' style='color: white'></i>Code Detail</a></span> -->
 											<!-- <span><a href="#"><i class="icon-heart"></i> 49</a></span> -->
 										</p>
 									</div>
