--- a/index.html
+++ b/index.html
@@ -548,6 +548,7 @@
 					               <div class="timeline-label">
 					               	<h2><a href="#">최우수상</a> <span>2022.07.19</span></h2>
 					                  <h2>Java Festival - 스마트인재개발원</h2>
+									  <h2><a href="best1.html" style="color: black;"><i class='fa fa-file-picture-o'></i>  click!</a></h2>
 					               </div>
 					            </div>
 					         </article>
@@ -561,6 +562,7 @@
 					               <div class="timeline-label">
 					                  <h2><a href="#">우수상</a> <span>2020.10.21</span></h2>
 					                  <h2>Kaggle - 스마트인재개발원</h2>
+									  <h2><a href="best2.html" style="color: black;"><i class='fa fa-file-picture-o'></i>  click!</a></h2>
 					               </div>
 					            </div>
 					         </article>
