--- a/best1.html
+++ b/best1.html
@@ -7,6 +7,6 @@
     <title>Certification</title>
 </head>
 <body>
-    <img src="images/best1.jpeg" style="width: 50%; height: auto;">
+    <img src="images/best1.jpeg" style="width: 50%; height: auto; margin-left: 25%;">
 </body>
 </html>
