--- a/best2.html
+++ b/best2.html
@@ -7,8 +7,8 @@
     <title>Certification</title>
 </head>
 <body>
-    <div style="align-content: center;">
-    <img src="images/best2.jpeg" style="width: 50%; height: auto;">
+    <div>
+    <img src="images/best2.jpeg" style="width: 50%; height: auto; margin-left: 25%;">
     </div>
 </body>
 </html>
