--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="row">
+							<!-- <div class="row">
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
 									<div class="services color-1">
 										<span class="icon2"><i class="icon-bulb"></i></span>
@@ -165,7 +165,7 @@
 										<a href="#" class="btn-hire">앞으로 뛰어난 웹 개발자가 되고 싶습니다!</a>
 									</div>
 								</div>
-							</div>
+							</div> -->
 						</div>
 					</div>
 				</div>
