--- a/receta.html
+++ b/receta.html
@@ -7,6 +7,6 @@
     <title>Project</title>
 </head>
 <body>
-    <img src="images/receta.png" style="width: 100%; height: auto;">
+    <img src="images/receta2.png" style="width: 100%; height: auto;">
 </body>
 </html>
