--- a/myproject.html
+++ b/myproject.html
@@ -7,6 +7,6 @@
     <title>Project</title>
 </head>
 <body>
-    <img src="images/spring.png" style="width: 100%; height: auto;">
+    <img src="images/spring2.png" style="width: 100%; height: auto;">
 </body>
 </html>
