--- a/index.html
+++ b/index.html
@@ -396,9 +396,9 @@
 									    </div>
 									    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 									        <div class="panel-body">
-												<h4>Java</h4>
-												<h4>Python</h4>
-												<h4>Sql</h4>
+												<img src="images/java.png" width="20%">
+												<img src="images/python.png" width="20%">
+												<img src="images/sql.png" width="20%">
 									        </div>
 									    </div>
 									</div>
@@ -411,7 +411,9 @@
 									    </div>
 									    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 									        <div class="panel-body">
-												<h4>Java</h4>
+												<img src="images/htmlcssjs.png" width="40%">
+												<img src="images/jquery.png" width="20%">
+												<img src="images/bootstrap.png" width="20%">
 									        </div>
 									    </div>
 									</div>
@@ -419,14 +421,14 @@
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingFour">
 									        <h4 class="panel-title">
-									            <a style="background-color: #88b5e5;" class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">GNU UNIVERSITY
+									            <a style="background-color: #88b5e5;" class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">Backend
 									            </a>
 									        </h4>
 									    </div>
 									    <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
 									        <div class="panel-body">
-												<h2>경상대학교 컴퓨터과학과 중퇴</h2><br>
-												<h4>2007-03 ~ 2010-03</h4>
+												<img src="images/springlogo.png" width="40%">
+												<img src="images/git.png" width="40%">
 									        </div>
 									    </div>
 									</div>
@@ -434,14 +436,18 @@
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingFive">
 									        <h4 class="panel-title">
-									            <a style="background-color: #88b5e5;" class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">YeoCheon High School
+									            <a style="background-color: #88b5e5;" class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">database, tool
 									            </a>
 									        </h4>
 									    </div>
 									    <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
 									        <div class="panel-body">
-												<h2>여천고등학교</h2><br>
-												<h4>2004-03 ~ 2007-03</h4>
+												<img src="images/mysql.png" width="25%">
+												<img src="images/oracle.png" width="25%">
+												<img src="images/sts.png" width="25%">
+												<img src="images/intellij.png" width="25%">
+												<img src="images/visualcode.png" width="25%">
+												<img src="images/eclipse.png" width="25%">
 									        </div>
 									    </div>
 									</div>
