--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingTwo">
 									        <h4 class="panel-title">
-									            <a style="background-color: #88b5e5;" class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">LANGUAGE
+									            <a style="background-color: #98a2ad;" class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">LANGUAGE
 									            </a>
 									        </h4>
 									    </div>
@@ -405,7 +405,7 @@
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingThree">
 									        <h4 class="panel-title">
-									            <a style="background-color: #88b5e5;" class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">FrontEnd
+									            <a style="background-color: #98a2ad;" class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">FrontEnd
 									            </a>
 									        </h4>
 									    </div>
@@ -421,7 +421,7 @@
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingFour">
 									        <h4 class="panel-title">
-									            <a style="background-color: #88b5e5;" class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">Backend
+									            <a style="background-color: #98a2ad;" class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">Backend
 									            </a>
 									        </h4>
 									    </div>
@@ -436,7 +436,7 @@
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingFive">
 									        <h4 class="panel-title">
-									            <a style="background-color: #88b5e5;" class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">database, tool
+									            <a style="background-color: #98a2ad;" class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">database, tool
 									            </a>
 									        </h4>
 									    </div>
